--- a/_config.yml
+++ b/_config.yml
@@ -36,17 +36,22 @@ perfil_desc: "Student of Hacking"
 theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
-  - jekyll-archives
+#   - jekyll-archives
 
-jekyll-archives:
-  enabled: all
-  layout: default
-  permalinks:
-    tag: '/tag/:name/'
-    category: '/category/:name/'
-  layouts:
-    tag: tag
-    category: category
+# jekyll-archives:
+#   enabled: all
+#   layout: default
+#   permalinks:
+#     tag: '/tag/:name/'
+#     category: '/category/:name/'
+#   layouts:
+#     tag: tag
+#     category: category
+
+collections:
+  archives:
+    output: true
+    permalink: /archives/:path/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
