Changing post meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ google_analytics: "UA-177413122-1"
 perfil_img: "https://avatars3.githubusercontent.com/u/41487053?s=460&u=9a9013b086c204ed428cecfbdeee189b39d8b56c"
 name: "ReddyyZ"
 perfil_desc: "Student of Hacking"
+lang: pt-BR
 
 # Build settings
 theme: jekyll-theme-hacker
