--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Articles about pentest & hacking.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://reddyyz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+twitter_username: arthurc_oli
 github_username:  ReddyyZ
 google_analytics: "UA-177413122-1"
 
