--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
 #   - jekyll-archives
 
 categorias: [
