Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,9 @@
 
 title: ReddyyZ
 email: arthurc.oli.whitehat@gmail.com
+# Articles about pentest & hacking.
 description: >- # this means to ignore newlines until "baseurl:"
-  Articles about pentest & hacking.
+  Artigos sobre pentest & hacking.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://reddyyz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: arthurc_oli
